# LustTermina

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
assets/: gen-icon.ps1
src/: main.rs
