[package]
name = "lust_termina"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
eframe = "0.35.0"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Storage_Packaging_Appx"] }

[build-dependencies]
winresource = "0.1.31"
